--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan vendor:publish --force",
             "php artisan migrate",
             "php artisan migrate --path=database/migrations/updates",
