--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "syscover/nav-tools": "~1.0",
+        "syscover/pulsar": "~1.0",
+        "syscover/market": "~1.0",
+        "syscover/comunik": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
