--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,8 @@
 
 /storage/exports/
 
+composer.dev.lock
+
 # -- Laravel -----------------------------------------
 Homestead.yaml
 Homestead.json
